--- a/templates/iniciosecion.html
+++ b/templates/iniciosecion.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de seción</title>
+{% block title %}
+    Login
+{% endblock %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+{% block body %}
 
 <body>
     <form class="login-form">
@@ -27,4 +23,4 @@
     <div class="underlay-black"></div>
 </body>
 
-</html>
+{% endblock %}
