--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-light">
         <form class="form-inline" action="/action_page.php">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <input class="form-control mr-sm-2" name = "busqueda" type="text" placeholder="Search">
             <button class="btn btn-success" type="submit">Search</button>
           </form>
         <ul class="navbar-nav">
