--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,24 +11,27 @@
     <title>Books - {% block title %}{% endblock %}</title>
 </head>
 <body>
+  {% if session["id_user"] %}
     <nav class="navbar navbar-expand-sm bg-light">
         <form class="form-inline" action="/action_page.php">
             <input class="form-control mr-sm-2" name = "busqueda" type="text" placeholder="Search">
             <button class="btn btn-success" type="submit">Search</button>
           </form>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 3</a>
-          </li>
-        </ul>
-      </nav>
-      <br>
+    </nav>
+    <br>
+    {% else %}
+    <nav class="navbar navbar-expand-sm bg-light">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/registro">Registro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="iniciosecion">inicio secion</a>
+        </li>
+      </ul>
+    </nav>
+    <br>
+    {% endif %}
       
         {% with messages = get_flashed_messages() %}
         {% if messages %}
