--- a/templates/index.html
+++ b/templates/index.html
@@ -3,3 +3,15 @@
 {% block title %}
     Inicio
 {% endblock %}
+
+
+{% block body %}
+    
+    <form method="post" action="/busqueda">
+   
+        <input class="col-sm-3 my-1" name = "busqueda" type="text" placeholder="Search">
+        <button class="btn btn-success" type="submit">Search</button>
+       
+    </form>
+
+{% endblock %}
