--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,17 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Books - {% block title %}{% endblock %}</title>
-</head>
-<body>
-  {% if session["id_user"] %}
-    <nav class="navbar navbar-expand-sm bg-light">
-        <form class="form-inline" action="/action_page.php">
-            <input class="form-control mr-sm-2" name = "busqueda" type="text" placeholder="Search">
-            <button class="btn btn-success" type="submit">Search</button>
-          </form>
-    </nav>
-    <br>
-    {% else %}
+
     <nav class="navbar navbar-expand-sm bg-light">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -28,23 +18,31 @@
         <li class="nav-item">
           <a class="nav-link" href="iniciosecion">inicio secion</a>
         </li>
+        <li>
+          <a class="nav-link" href="/Cerrarsecion">Cerrar Secion</a>
+        </li>
       </ul>
-    </nav>
-    <br>
-    {% endif %}
-      
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul class=flashes>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
 
-      {% block body %}
-      {% endblock %}
+    </nav>
+</head>
+
+<body>
+|
+
+  
+      
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+     <ul class=flashes>
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+      </ul>
+      {% endif %}
+      {% endwith %}
+
+    {% block body %}
+    {% endblock %}
 
 
 </body>
