--- a/templates/busqueda.html
+++ b/templates/busqueda.html
@@ -22,9 +22,9 @@
         {% for columna  in buscar %}
             <tr>
                 <td><a href ="/busqueda/{{columna.isbn}}">{{columna.isbn}}</a></td>
-                <td><a href ="https://libros.html">{{columna.title}}</a></td>
-                <td><a href ="https://libros.html">{{columna.author}}</a></td>
-                <td><a href ="https://libros.html">{{columna.year}}</a></td>
+                <td><a href ="/busqueda/{{columna.isbn}}">{{columna.title}}</a></td>
+                <td><a href ="/busqueda/{{columna.isbn}}">{{columna.author}}</a></td>
+                <td><a href ="/busqueda/{{columna.isbn}}">{{columna.year}}</a></td>
             </tr>
         {% endfor %}
     </tbody>
